[workspace]
resolver = "3"
members = [
    "tfhe",
    "tfhe-benchmark",
    "tfhe-fft",
    "tfhe-ntt",
    "tfhe-zk-pok",
    "tasks",
    "tfhe-csprng",
    "backends/tfhe-cuda-backend",
    "backends/zk-cuda-backend",
    "backends/tfhe-hpu-backend",
    "utils/tfhe-versionable",
    "utils/tfhe-versionable-derive",
    "utils/tfhe-backward-compat-data",
    "utils/tfhe-backward-compat-data/crates/add_new_version",
    "utils/param_dedup",
    "tests",
    "mockups/tfhe-hpu-mockup",
    "apps/test-vectors",
]

exclude = ["utils/tfhe-lints", "apps/trivium"]

[workspace.package]
rust-version = "1.91.1"

[workspace.dependencies]
aligned-vec = { version = "0.6", default-features = false }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
bytemuck = "1.24"
dyn-stack = { version = "0.13", default-features = false }
itertools = "0.14"
num-complex = "0.4"
pulp = { version = "0.22", default-features = false }
rand = "0.8"
rayon = "1.11"
serde = { version = "1.0", default-features = false }
# wasm-bindgen (at this point in time) automatically enables the unsafe-eval feature
wasm-bindgen = { version = "0.2.113", default-features = false }
getrandom = "0.2.17"
# The project maintainers consider that this is the last version of the 1.3 branch, any newer version should not be trusted
bindgen = "0.71"
bincode = "=1.3.3"
cmake = "0.1"
pkg-config = "0.3"
clap = { version = "4.5", features = ["derive"] }

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"

[profile.release_lto_off]
inherits = "release"
lto = "off"

# Compiles much faster for tests and allows reasonable performance for iterating
[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false

[workspace.metadata.dylint]
libraries = [{ path = "utils/tfhe-lints" }]

[profile.debug_lto_off]
inherits = "dev"
debug = true
lto = "off"
debug-assertions = false
overflow-checks = false
