[package]
name = "concrete-float"
version = "0.1.0-beta.0"
edition = "2018"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Homomorphic Integer circuit interface for the concrete FHE library."
homepage = "https://www.zama.ai/concrete-framework"
documentation = "https://docs.zama.ai/home/"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
aligned-vec = { version = "0.5", features = ["serde"] }
dyn-stack = { version = "0.9" }
rayon = "1.5"

lazy_static = { version = "1.4.0", optional = true }

tfhe = { path = "../tfhe", features = ["shortint", "integer"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { path = "../tfhe", features = ["shortint", "integer", "x86_64-unix"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { path = "../tfhe", features = ["shortint", "integer", "aarch64-unix"] }

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]
seeder_x86_64_rdseed = []
seeder_unix = []
generator_x86_64_aesni = []
generator_fallback = []
generator_aarch64_aes = []

x86_64 = [
    "seeder_x86_64_rdseed",
    "generator_x86_64_aesni",
    "generator_fallback",
]
x86_64-unix = ["x86_64", "seeder_unix"]
aarch64 = [ "generator_aarch64_aes", "generator_fallback"]
aarch64-unix = ["aarch64", "seeder_unix"]


[dev-dependencies]
criterion = "0.5.1"
lazy_static = "1.4.0"
bincode = "1.3.3"
paste = "1.0.7"
rand = "0.8.4"
doc-comment = "0.3.3"
#concrete-shortint = { path = "../tfhe", features = ["internal-keycache"] }

#[features]
# Keychache used to speed up tests and benches
# by not requiring to regererate keys at each launch
#internal-keycache = ["lazy_static", "shortint/src/internal-keycache"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[[bench]]
name = "float-bench"
path = "benches/bench.rs"
harness = false
required-features = []
