[package]
name = "mpi_test"
version = "0.4.0"
edition = "2021"
license = "BSD-3-Clause-Clear"
description = "Cryptographically Secure PRNG used in the TFHE-rs library."
homepage = "https://zama.ai/"
documentation = "https://docs.zama.ai/tfhe-rs"
repository = "https://github.com/zama-ai/tfhe-rs"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]
rust-version = "1.72"

[dependencies]
mpi = { path = "../../rsmpi" }
tfhe = { path = "../tfhe", features = [
    "shortint",
    "integer",
    "x86_64",
    "internal-keycache",
] }
rayon = "1.8"
bincode = "1.3"
threadpool = "1.8"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.6.4"
itertools = "*"
thread-priority = "0.15.1"
