[package]
name = "tasks"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
walkdir = "2.5.0"
no-comment = "0.0.3"
cargo_metadata = "0.23.1"
