[package]
name = "tfhe-ntt"
version = "0.4.0"
edition = "2021"
description = "tfhe-ntt is a pure Rust high performance number theoretic transform library."
readme = "README.md"
repository = "https://github.com/zama-ai/tfhe-rs"
license = "BSD-3-Clause-Clear"
homepage = "https://zama.ai/"
keywords = ["ntt"]
rust-version = "1.67"


[dependencies]
aligned-vec = { workspace = true }
bytemuck = { workspace = true }
pulp = { workspace = true }

[features]
default = ["std"]
std = ["pulp/std", "aligned-vec/std"]
nightly = ["pulp/nightly"]

[dev-dependencies]
criterion = "0.5"
rand = { workspace = true }
serde = "1.0.163"
serde_json = "1.0.96"

[[bench]]
name = "ntt"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]
