[package]
name = "tfhe-ntt"
version = "0.7.1"
edition = "2021"
description = "tfhe-ntt is a pure Rust high performance number theoretic transform library."
readme = "README.md"
repository = "https://github.com/zama-ai/tfhe-rs"
license = "BSD-3-Clause-Clear"
homepage = "https://zama.org/"
keywords = ["ntt"]
rust-version.workspace = true


[dependencies]
aligned-vec = { workspace = true }
bytemuck = { workspace = true }
pulp = { workspace = true }

[features]
default = ["std", "avx512"]
std = ["pulp/std", "aligned-vec/std"]
avx512 = ["pulp/x86-v4"]

[dev-dependencies]
criterion = "0.5"
rand = { workspace = true }
serde = "1.0.163"
serde_json = "1.0.96"

[[bench]]
name = "ntt"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]
