[package]
name = "tfhe-rs-cost-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-vec = { version = "0.5", features = ["serde"] }
concrete-cpu-noise-model = { path = "../concrete-cpu-noise-model" }
concrete-security-curves = { path = "../concrete-security-curves-rust" }
clap = { version = "3.1", features = ["derive"] }
itertools = "0.8.0"
indicatif = "0.16.2"
rand = "0.6.5"
rand_chacha = "0.1.1"

[target.'cfg(target_arch = "x86_64")'.dependencies.tfhe]
path = "../tfhe"
features = ["x86_64-unix"]

[target.'cfg(target_arch = "aarch64")'.dependencies.tfhe]
path = "../tfhe"
features = ["aarch64-unix"]

[features]
nightly-avx512 = ["tfhe/nightly-avx512"]
