[package]
name = "tfhe-wasm-client-sdk"
version = "0.1.0"
authors = ["Zama team"]
edition = "2021"
license = "BSD-3-Clause-Clear"
description = "Wasm client interface for tfhe"
homepage = "https://www.zama.ai/concrete-framework"
repository = "https://github.com/zama-ai/tfhe-rs"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
paste = "1.0.7"

[dependencies.tfhe]
path = "../tfhe"
default-features = false
features = [
    "backend_default",
    "backend_default_parallel",
    "backend_default_serialization",
    "backend_fft",
    "backend_fft_serialization",
    "shortints",
]
