[package]
name = "tfhe-zk-pok"
version = "0.8.0"
edition = "2021"
keywords = ["zero", "knowledge", "proof", "vector-commitments"]
homepage = "https://zama.ai/"
documentation = "https://docs.zama.ai/tfhe-rs"
repository = "https://github.com/zama-ai/tfhe-rs"
license = "BSD-3-Clause-Clear"
description = "tfhe-zk-pok: An implementation of zero-knowledge proofs of encryption for TFHE."
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel"] }
ark-poly = { version = "0.5.0", features = ["parallel"] }
rand = { workspace = true }
rayon = { workspace = true }
sha3 = "0.10.8"
serde = { workspace = true, features = ["default", "derive"] }
zeroize = "1.7.0"
num-bigint = "0.4.5"
tfhe-versionable = { version = "0.7.0", path = "../utils/tfhe-versionable" }
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-par-mq = { version = "0.1.0", path = "../utils/wasm-par-mq", features = ["sync-api"] }

[features]
experimental = []

[dev-dependencies]
serde_json = "~1.0"
itertools = { workspace = true }
bincode = { workspace = true }
criterion = "0.5.1"

[[bench]]
name = "pke_v1"
harness = false

[[bench]]
name = "pke_v2"
harness = false
